2007-11-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gles/cogl.c: (cogl_fog_set):
	Minor fixes for fog on GLES.

2007-11-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/cogl/cogl.h: Add cogl_fog_set() abstracting the
	glFog() functions and enabling the GL_FOG flag.

	* clutter/cogl/gl/cogl.c: Add GL implementation of cogl_fog_set().
	
	* clutter/cogl/gles/cogl.c: Add GL/ES implementation of
	cogl_fog_set().

	* clutter.symbols: Add new symbols.

	* clutter/clutter-stage.h: Add API to enable depth cueing on
	the stage using a linear GL fog, and to set the parameters
	for it (#637).

	* clutter/clutter-stage.c (clutter_stage_paint): Enable the
	GL fog if the ClutterStage:use-fog property is true.

	* tests/test-depth.c: Test the new stage API.

2007-11-20  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-main.c: (event_click_count_generate): generalized
	click_count generation code.
	* tests/test-events.c: (input_cb): extended test to report click_count
	for release and scroll events as well as press events.

2007-11-20  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-main.c: (clutter_do_event): avoid computing source
	of events if it is already set (for synthetic events.)
	* clutter/clutter-event.c: Add more information to the documentation
	of clutter_event_put.

2007-11-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* README: Add diff example command lines for submitting patches.

2007-11-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c::
	* clutter/clutter-behaviour-opacity.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-effect.c:
	* clutter/clutter-label.c: Remove the usage of G_PARAM_CONSTRUCT
	without an override for the ::construct virtual function; using
	G_PARAM_CONSTRUCT to set the default value of a property is not
	the recommended approach; default values are set inside the
	instance init function.

2007-11-20  Emmanuele Bassi  <ebassi@openedhand.com>
